<resources>
    <string name="app_name">MyBooks</string>

    <!-- Títulos das telas -->
    <string name="title_home">Home</string>
    <string name="title_favorites">Favoritos</string>
    <string name="title_book_details">Titulo do livro</string>

    <!-- Mensagens dos diálogos -->
    <string name="dialog_message_delete_item">Tem certeza de que deseja excluir este item?</string>
    <string name="dialog_positive_button_yes">Sim</string>
    <string name="dialog_negative_button_no">Não</string>

    <!-- Mensagens de sucesso e erro -->
    <string name="msg_removed_successfully">Item removido com sucesso!</string>
    <string name="msg_no_books">Nenhum livro encontrado nos seus favoritos!</string>

    <!-- Botões e descrições -->
    <string name="button_remove_book">Remover livro</string>
    <string name="desc_book_image">Imagem de livros</string>

    <!-- Texto dos itens do livro -->
    <string name="book_title">Título do livro</string>
    <string name="book_author">Autor </string>
    <string name="book_genre">Gênero </string>
    <string name="name_author">Nome do autor"</string>
    <string name="name_genre">Nome do gênero"</string>
    <string name="quest_favorite">Livro favorito?</string>
    <string name="checking_favorte">Favorito</string>

</resources>